# DRF_todo

./: README.md  manage.py  pyproject.toml
mytodo/: settings.py  urls.py
todo/: serializers.py  urls.py  views.py
todo/migrations/: 0001_initial.py
