[tool.poetry]
name = "drf-todo"
version = "0.1.0"
description = ""
authors = ["Heo-JunHyeok <junhyeok_1996@naver.com>"]
readme = "README.md"
packages = [{include = "drf_todo"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.1.7"
djangorestframework = "^3.14.0"
django-dotenv = "^1.4.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
